--- a/fanatic.html
+++ b/fanatic.html
@@ -4,7 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Fanatic</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&family=Inter:wght@100..900&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -39,13 +43,13 @@
             SIZES: 11'6"X31"
           </p>
         </div>
-        <p class="header__decor-text">
+        <p class="header__decor-text header__decor-text--one">
           DOM
         </p>
-        <p class="header__decor-text">
+        <p class="header__decor-text header__decor-text--two">
           FREE
         </p>
-        <p class="header__decor-text">
+        <p class="header__decor-text header__decor-text--three">
           PACK SMALL FOR BIG ADVENTURES
         </p>
       </div>
