--- a/fanatic.html
+++ b/fanatic.html
@@ -59,13 +59,12 @@
     <section class="info">
       <div class="container">
         <div class="info__top">
-          <p class="info__top-text">
+          <p class="info__top-text info__top-text--one">
             After our well received Fly Air Pocket Edition we’re adding the respective touring iSUP to our
             Range – the Ray Air Pocket Edition! The ultra travel-friendly touring iSUP is built in a tough but light
             construction
-            that allows it to be packed into a backpack half the size of a regular iSUP.
-          </p>
-          <button class="popup-btn info__btn">
+            that allows it to be packed into a backpack half the size of a regular iSUP.  
+            <button class="popup-btn info__btn">
             <svg xmlns="http://www.w3.org/2000/svg" width="70" height="70" viewBox="0 0 70 70" fill="none">
               <path d="M52.6733 34.5L26.1634 49.6554V19.3446L52.6733 34.5Z" fill="white" />
               <circle cx="35" cy="35" r="34" stroke="white" stroke-width="2" />
@@ -74,7 +73,8 @@
               Play video
             </span>
           </button>
-          <p class="info__top-text">
+          </p>
+          <p class="info__top-text info__top-text--two">
             With a thinner deck pad and tough but flexible construction, the Ray Air Pocket Edition can be rolled and
             packed into
             a much narrower bag, making it extremely easy to store and transport. Based on our highly versatile Ray Air
@@ -93,7 +93,6 @@
           </h3>
           <ul class="info__specs-list">
             <li class="info__specs-item">
-
               <p class="info__specs-caption">
                 BOARD
               </p>
@@ -169,7 +168,7 @@
       </div>
     </section>
 
-    
+
   </main>
 </body>
 
