added styles for the technology section

--- a/fanatic.html
+++ b/fanatic.html
@@ -88,7 +88,7 @@
           <img class="info__top-img" src="images/sup.png" alt="images">
         </div>
         <div class="info__specs">
-          <h3 class="info__specs-title">
+          <h3 class="info__specs-title title">
             SPECS
           </h3>
           <ul class="info__specs-list">
@@ -171,7 +171,7 @@
       <div class="container">
         <div class="buy__inner">
           <div class="buy__content">
-            <h3 class="buy__title">
+            <h3 class="buy__title title">
               RAY AIR POCKET
             </h3>
             <ul class="buy__list">
@@ -242,7 +242,8 @@
                 Play video
               </span>
             </button>
-            <h3 class="technology__title">
+            <div class="technology__top-box">
+            <h3 class="technology__title title">
               MICRO TECHNOLOGY
             </h3>
             <ol class="technology__list">
@@ -262,6 +263,7 @@
                 V-Drop Stitch core
               </li>
             </ol>
+            </div>
           </div>
         </div>
       </div>
@@ -277,22 +279,22 @@
                 regular sized iSUP packed into minimal space.
               </p>
               <div class="gallery-min">
-                <img class="gallery-min__img" src="images/gmin-1.jpg" alt="images">
-                <img class="gallery-min__img" src="images/gmin-2.jpg" alt="images">
+                <img class="gallery-min__img gallery-min__img--1" src="images/gmin-1.jpg" alt="images">
+                <img class="gallery-min__img gallery-min__img--2" src="images/gmin-2.jpg" alt="images">
                 <img class="gallery-min__img" src="images/gmin-3.jpg" alt="images">
               </div>
             </div>
             <div class="gallery-max">
               <img class="gallery-max__img" src="images/gmax-1.jpg" alt="images">
-              <img class="gallery-max__img" src="images/gmax-2.jpg" alt="images">
-              <img class="gallery-max__img" src="images/gmax-3.jpg" alt="images">
-              <img class="gallery-max__img" src="images/gmax-4.jpg" alt="images">
-              <img class="gallery-max__img" src="images/gmax-5.jpg" alt="images">
+              <img class="gallery-max__img gallery-max__img--2" src="images/gmax-2.jpg" alt="images">
+              <img class="gallery-max__img gallery-max__img--3" src="images/gmax-3.jpg" alt="images">
+              <img class="gallery-max__img gallery-max__img--4" src="images/gmax-4.jpg" alt="images">
+              <img class="gallery-max__img gallery-max__img--5" src="images/gmax-5.jpg" alt="images">
               <p class="gallery-max__text">
-                ENJOY
+                ENJOY <br>
                 YOUR LIFE
               </p>
-              <img class="gallery-max__img" src="images/gmax-6.jpg" alt="images">
+              <img class="gallery-max__img gallery-max__img--6" src="images/gmax-6.jpg" alt="images">
             </div>
           </div>
         </div>
