added an adaptive to the site. the project is complete.

--- a/fanatic.html
+++ b/fanatic.html
@@ -279,22 +279,22 @@
                 regular sized iSUP packed into minimal space.
               </p>
               <div class="gallery-min">
-                <img class="gallery-min__img gallery-min__img--1" src="images/gmin-1.jpg" alt="images">
-                <img class="gallery-min__img gallery-min__img--2" src="images/gmin-2.jpg" alt="images">
-                <img class="gallery-min__img" src="images/gmin-3.jpg" alt="images">
+                <img class="gallery-min__img gallery-min__img--1" src="images/gmin-1.png" alt="images">
+                <img class="gallery-min__img gallery-min__img--2" src="images/gmin-2.png" alt="images">
+                <img class="gallery-min__img" src="images/gmin-3.png" alt="images">
               </div>
             </div>
             <div class="gallery-max">
-              <img class="gallery-max__img" src="images/gmax-1.jpg" alt="images">
-              <img class="gallery-max__img gallery-max__img--2" src="images/gmax-2.jpg" alt="images">
-              <img class="gallery-max__img gallery-max__img--3" src="images/gmax-3.jpg" alt="images">
-              <img class="gallery-max__img gallery-max__img--4" src="images/gmax-4.jpg" alt="images">
-              <img class="gallery-max__img gallery-max__img--5" src="images/gmax-5.jpg" alt="images">
+              <img class="gallery-max__img" src="images/gmax-1.png" alt="images">
+              <img class="gallery-max__img gallery-max__img--2" src="images/gmax-2.png" alt="images">
+              <img class="gallery-max__img gallery-max__img--3" src="images/gmax-3.png" alt="images">
+              <img class="gallery-max__img gallery-max__img--4" src="images/gmax-4.png" alt="images">
+              <img class="gallery-max__img gallery-max__img--5" src="images/gmax-5.png" alt="images">
               <p class="gallery-max__text">
                 ENJOY <br>
                 YOUR LIFE
               </p>
-              <img class="gallery-max__img gallery-max__img--6" src="images/gmax-6.jpg" alt="images">
+              <img class="gallery-max__img gallery-max__img--6" src="images/gmax-6.png" alt="images">
             </div>
           </div>
         </div>
